cleanup:versions, junit
minor version cleanup
deprecated methods directly using junit in MockFlowTester